--- a/src/shop_bot/webhook_server/templates/settings.html
+++ b/src/shop_bot/webhook_server/templates/settings.html
@@ -859,7 +859,7 @@
 							<input class="form-control" type="text" id="support_user" name="support_user" value="{{ settings.support_user or '' }}" />
 						</div>
 						<div class="mb-3">
-							<label class="form-label" for="channel_url">URL Telegram-канала (напр. https://t.me/tweopi)</label>
+							<label class="form-label" for="channel_url">URL Telegram-канала (напр. https://t.me/kryakushin666)</label>
 							<input class="form-control" type="url" id="channel_url" name="channel_url" value="{{ settings.channel_url or '' }}" />
 						</div>
 						<div class="mb-3">
